--- a/styleboard.css
+++ b/styleboard.css
@@ -1,8 +1,6 @@
-.canvas-container {
+#game-board{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; 
-    
-  }
-
+    height: 100vh;
+} 
